--- a/.env
+++ b/.env
@@ -2,8 +2,9 @@ APP_HOST=''
 APP_PORT=''
 
 DB='db_dev_test'
-DB_CLIENT='mssql'
+DB_DIALECT='mssql'
 DB_HOST='192.168.0.200'
+DB_INSTANCE='SQLEXPRESS'
 DB_PORT='1433'
 DB_USER='dbAdmin'
 DB_PWD='Ctelecom2017'
