--- a/package.json
+++ b/package.json
@@ -5,16 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --detectOpenHandles",
-    "dev": "nodemon src/cjs/server.js",
-    "start": "node src/cjs/server.js",
-    "build": ""
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js",
+    "build": "sucrase ./src -d ./dist --transforms imports"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -23,6 +22,7 @@
     "knex": "^2.5.1",
     "mongoose": "^7.4.0",
     "multer": "^1.4.5-lts.1",
+    "sequelize": "^6.32.1",
     "tedious": "^16.2.0",
     "validator": "^13.9.0"
   },
@@ -35,6 +35,7 @@
     "jest": "^29.6.1",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.0",
+    "sucrase": "^3.34.0",
     "supertest": "^6.3.3"
   }
 }
