projeto padrão knex

--- a/.env
+++ b/.env
@@ -1,12 +1,11 @@
 APP_HOST=''
 APP_PORT=''
 
-DB='db_dev_test'
-DB_DIALECT='mssql'
-DB_HOST='192.168.0.200'
-DB_INSTANCE='SQLEXPRESS'
-DB_PORT='1433'
-DB_USER='dbAdmin'
-DB_PWD='Ctelecom2017'
+DATABASE_DIALECT='mssql'
+DATABASE='db_dev_test'
+DATABASE_HOST='192.168.0.200'
+DATABASE_PORT='1433'
+DATABASE_USERNAME='dbAdmin'
+DATABASE_PASSWORD='Ctelecom2017'
 
 JWTSECRET='abc123'
