--- a/package.json
+++ b/package.json
@@ -20,9 +20,8 @@
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
     "knex": "^2.5.1",
-    "mongoose": "^7.4.0",
+    "mssql": "^9.1.1",
     "multer": "^1.4.5-lts.1",
-    "sequelize": "^6.32.1",
     "tedious": "^16.2.0",
     "validator": "^13.9.0"
   },
